--- a/src/index.html
+++ b/src/index.html
@@ -11,20 +11,20 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+  <h2>Current version : 1.0.2</h2>
 
+  <div id="world" style="width=400px;height:600px;margin-top: 20px;"></div>
 
-  <h2>Current version : 1.0.0</h2>
-
-  <div id="world" style="width=400px;height:600px;margin-top: 100px;"></div>
-
-  <div style="margin-top: 100px;">
+  <div style="margin-top: 30px;">
     <button id="Paris" type="button" class="btn btn-primary">Paris</button>
     <button id="Singapore" type="button" class="btn btn-primary">Singapore</button>
     <button id="Manathan" type="button" class="btn btn-primary">Manhattan</button>
     <button id="Freeze" type="button" class="btn btn-warning">Freeze</button>
     <button id="Crash" type="button" class="btn btn-danger">Crash</button>
-  </div>
 
+
+  </div>
+    <textarea class="form-control" rows="9" id="comment"></textarea>
   <script src="https://rawgit.com/UDST/vizicities/master/examples/vendor/three.min.js"></script>
   <script src="https://cdn.rawgit.com/UDST/vizicities/850af673/examples/vendor/TweenMax.min.js"></script>
   <script src="https://cdn.rawgit.com/UDST/vizicities/850af673/dist/vizicities.min.js"></script>
